# Job_Coach

./: .gitignore  AiEngine.py  Candidate.py  Coach.py  Dockerfile  Gdrive_files.py  README.md  app.py  pyproject.toml  rebuild_image.sh  requirements.txt  sample_writing_style.txt
agents/: CompanyInvestigator.py  InterviewQuestion.py
myenv/: pyvenv.cfg
